support p2tr script type wallet creation